# defs.open223.info

./: CNAME  Makefile  README.md  app.js  check-links.py  check-links.sh  constraints.json  download_constraints.py  gendoc.py  generate_interactive_doc.py  index.html  make_site.py  pyproject.toml  ttl2md.py
.github/workflows/: build-newsite.yml  build-site.yml
ontologies/: 223enumerations.ttl  223standard.ttl
static/: index.html
templates/: index.html
templates/static/: app.js  site.css
